--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,8 +43,12 @@
 </div>
 
 
-  <app-homecourses></app-homecourses>
-  <app-educators></app-educators>
-  <app-footer></app-footer>
+<app-homecourses></app-homecourses>
+<app-educators></app-educators>
+<app-hirecomp></app-hirecomp>
+<app-studfeed></app-studfeed>
+
+
+<app-footer></app-footer>
 
 
