--- a/src/app/homecourses/homecourses.component.html
+++ b/src/app/homecourses/homecourses.component.html
@@ -137,7 +137,7 @@
 
 <a id="sidebtnanchor" routerLink="/courses" routerLinkActive="active">
   <div id="sidebtn">
-    <b><u>See More Courses</u></b>
+    <b><u>Explore More Courses</u></b>
   </div>
 </a>
 <br/>
