Adding more features

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,1 +1,42 @@
-<p>aboutus works!</p>
+<br/>
+<div id="chead">
+  <u><b>About Us</b></u>
+</div>
+
+
+<div id="aboutusbox">
+  <h4 id="intro"><b>
+    Welcome to Coding Minds Academy, where coding enthusiasts of all ages embark on an inspiring journey of knowledge, innovation, and creativity. We are a premier edtech platform dedicated to empowering learners with cutting-edge coding skills and shaping the next generation of tech leaders.
+  </b></h4>
+  <div id="content">
+    <p><i class="fa-regular fa-circle-dot"></i>
+      <b> Innovative Curriculum for Future-Ready Skills :</b>
+      At Coding Minds Academy, we believe in staying ahead of the curve. Our comprehensive curriculum is meticulously crafted to cater to the demands of the ever-evolving tech industry. From foundational programming languages to advanced topics like artificial intelligence and data science, our courses encompass a wide spectrum of future-ready skills. Our curriculum is designed to equip learners with the knowledge and expertise to thrive in the digital age.
+    </p>
+    <p><i class="fa-regular fa-circle-dot"></i>
+      <b> Experienced and Passionate Faculty :</b>
+      Our faculty is the heart and soul of our academy. Led by a team of experienced coding mentors and industry experts, we provide a nurturing learning environment. We pride ourselves on fostering a culture of continuous learning and collaboration, empowering learners to thrive in the fast-paced world of technology.
+    </p>
+    <p><i class="fa-regular fa-circle-dot"></i>
+      <b> Hands-On Projects and Real-World Applications : </b>
+      Theory is essential, but application is where true learning happens. That's why we emphasize hands-on projects and real-world applications in our courses. Our learners gain practical experience, building projects that mirror real-life challenges, and emerge with the confidence to tackle any coding problem that comes their way.
+    </p>
+    <p><i class="fa-regular fa-circle-dot"></i>
+      <b> Community-Driven Learning : </b>
+      At Coding Minds Academy, we believe in the strength of community-driven learning. Our vibrant learner community fosters connections, sparking creativity, and innovation through peer interactions, discussions, and collaborative projects. Together, we strive for excellence and inspire one another to push the boundaries of what's possible.
+    </p>
+    <p><i class="fa-regular fa-circle-dot"></i>
+      <b> Personalized Learning, Anytime, Anywhere : </b>
+      We understand that each learner is unique. Our platform offers personalized learning paths, allowing students to progress at their own pace. Whether you're a young learner discovering coding or a seasoned professional seeking to upskill, our flexible and self-paced courses fit your busy lifestyle.
+    </p>
+    <p><i class="fa-regular fa-circle-dot"></i>
+      <b> Building Future Leaders, One Line of Code at a Time : </b>
+      Coding Minds Academy is more than just an edtech platform; it's a catalyst for transformation. We are on a mission to nurture future leaders, sparking creativity, and igniting the passion for coding that shapes the world of tomorrow. Join us in unlocking the potential of every learner, one line of code at a time.
+    </p>
+    <h5><b>
+      Are you ready to embrace the power of coding and unleash your potential? Join Coding Minds Academy today and become a part of a vibrant community of tech enthusiasts, dreamers, and innovators, destined to leave a mark on the digital landscape. Together, we will code a brighter future!
+    </b></h5>
+  </div>
+</div>
+
+<br>
