--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,17 +6,17 @@
           <div class="display-area p-3">
             <!-- <router-outlet></router-outlet> -->
             <div [ngClass]="{'display-area-shrink':sideNavStatus}">
+                  <p class="fs-1 fw-bold">
+                    Hi there,
+                    welcome to Coding Minds Academy.
+                </p>
                 <p class="fs-1 fw-bold">
-                  Hi there,
-                  welcome to Coding Minds Academy
-              </p>
-              <p class="fs-1 fw-bold">
-                 We are glad to be a part of your success journey
-              </p>
-              <p class="fs-1 fw-bold">
-                Keep learning and keep growing
-              </p>
-              <img src="assets/qot.jpg" alt="quote" id="qot"/>
+                  We are glad to be a part of your success journey,
+                </p>
+                <p class="fs-1 fw-bold">
+                  Keep learning and keep growing.
+                </p>
+                <img src="assets/qot.jpg" alt="quote" id="qot"/>
             </div>
         </div>
       </main>
