--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,11 +43,11 @@
 </div>
 
 
-<app-homecourses></app-homecourses>
-<app-educators></app-educators>
-<app-hirecomp></app-hirecomp>
-<app-studfeed></app-studfeed>
-
+<app-homecourses id="courses"></app-homecourses>
+<app-educators id="faculty"></app-educators>
+<app-hirecomp id="Placement"></app-hirecomp>
+<app-studfeed id="reviews"></app-studfeed>
+<app-aboutus id="aboutUs"></app-aboutus>
 
 <app-footer></app-footer>
 
