--- a/src/app/profile/view-profile/view-profile.component.html
+++ b/src/app/profile/view-profile/view-profile.component.html
@@ -24,7 +24,7 @@
                         <img src="assets/pp.jpg" width="120" height="135" class="rounded-circle" alt="profilepic">
                     </div>
                     <div class="text-center mt-3">
-                        <span class="bg-secondary p-1 px-4 rounded text-white">Newbie</span>
+                        <span class="bg-secondary p-1 px-4 rounded text-white">Pro</span>
                         <h5 class="mt-2 mb-0">Shibom Kumar Bhowmik</h5>
                         <span>KIIT University</span>
                         <div class="px-4 mt-1">
