--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,1 +1,26 @@
-<p>courses works!</p>
+<nav class="d-flex navbar navbar-expand-lg navbar-light bg-warning sticky-top">
+  <a routerLink="/home" routerLinkActive="active">
+    <img src="assets/complogo.png" alt="logo" id="logo" />
+  </a>
+
+  <a href="#" id="courses"><b>Courses</b></a>
+  <a href="#" id="faculty"><b>Faculty</b></a>
+
+  <div class="dropdown">
+    <img class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" src="assets/login.png" alt="login"/>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li id="proli"><a class="dropdown-item" routerLink="/login" routerLinkActive="active">Login</a></li>
+        <li id="proli"><a class="dropdown-item" routerLink="/signup" routerLinkActive="active">Sign Up</a></li>
+      </ul>
+   </div>
+</nav>
+
+
+
+
+
+
+
+
+<br/>
+<app-footer></app-footer>
