--- a/src/app/hirecomp/hirecomp.component.html
+++ b/src/app/hirecomp/hirecomp.component.html
@@ -18,29 +18,36 @@
         <img src="assets/logo6.svg" alt="lg1"/>
         <img src="assets/logo7.svg" alt="lg1"/>
         <img src="assets/logo8.svg" alt="lg1"/>
-        <img src="assets/logo17.svg" alt="lg1"/>
-        <img src="assets/logo18.svg" alt="lg1"/>
-        <img src="assets/logo19.svg" alt="lg1"/>
-        <img src="assets/logo20.svg" alt="lg1"/>
-        <img src="assets/logo21.svg" alt="lg1"/>
-        <img src="assets/logo22.svg" alt="lg1"/>
-      </div>
-
-      <div class="logos-slide">
         <img src="assets/logo9.svg" alt="lg1"/>
         <img src="assets/logo10.svg" alt="lg1"/>
         <img src="assets/logo11.svg" alt="lg1"/>
         <img src="assets/logo12.svg" alt="lg1"/>
         <img src="assets/logo13.svg" alt="lg1"/>
         <img src="assets/logo14.svg" alt="lg1"/>
+      </div>
+      <div class="logos-slide">
         <img src="assets/logo15.svg" alt="lg1"/>
         <img src="assets/logo16.svg" alt="lg1"/>
-        <img src="assets/logo26.svg" alt="lg1"/>
-        <img src="assets/logo27.svg" alt="lg1"/>
+        <img src="assets/logo17.svg" alt="lg1"/>
+        <img src="assets/logo18.svg" alt="lg1"/>
+        <img src="assets/logo19.svg" alt="lg1"/>
+        <img src="assets/logo20.svg" alt="lg1"/>
+        <img src="assets/logo21.svg" alt="lg1"/>
+        <img src="assets/logo22.svg" alt="lg1"/>
         <img src="assets/logo23.svg" alt="lg1"/>
         <img src="assets/logo24.svg" alt="lg1"/>
         <img src="assets/logo25.svg" alt="lg1"/>
+        <img src="assets/logo26.svg" alt="lg1"/>
+        <img src="assets/logo27.svg" alt="lg1"/>
         <img src="assets/logo28.svg" alt="lg1"/>
       </div>
     </div>
 </div>
+
+<div id="stats">
+  <p id="p1">150+ Companies</p> 
+  <p id="p2">500+ Students placed till date</p>
+</div>
+
+<hr align="center" width="55%">
+<br/>
