--- a/src/app/studfeed/studfeed.component.css
+++ b/src/app/studfeed/studfeed.component.css
@@ -7,3 +7,74 @@
   justify-content: center;
   text-align: center;
 }
+
+#comphead{
+  font-family: Comic Sans MS, Comic Sans, cursive;
+  font-size: 30px;
+  /* margin-left:20px; */
+  margin-top: 10px;
+  margin-bottom: 10px;
+  justify-content: center;
+  text-align: center;
+}
+
+.card{
+  width:18rem;
+  margin-top: 2em;
+  padding: 1.5em 0.5em 0.5em;
+  border-radius: 2em;
+  text-align: center;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  font-family: Comic Sans MS, Comic Sans, cursive;
+}
+
+.card img {
+  width: 65%;
+  border-radius: 10%;
+  margin: 0 auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.card .card-title {
+  font-weight: 700;
+  font-size: 1.5em;
+}
+.card .btn {
+  border-radius: 2em;
+  background-color: rgb(5, 24, 131);
+  color: #ffffff;
+  padding: 0.5em 1.5em;
+}
+.card .btn:hover {
+  background-color: rgba(2, 11, 91, 0.7);
+  color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.cardscollection{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin-left:70px;
+}
+
+.card-text{
+  text-align: justify;
+  word-wrap:break-word;
+}
+
+#sidebtn{
+  font-family: Comic Sans MS, Comic Sans, cursive;
+  font-size: 19px;
+  /* margin-left: 85%; */
+  float: right;
+  margin-right:60px;
+}
+
+#sidebtnanchor{
+  text-decoration: none;
+  color: black;
+}
+
+#coursename{
+  text-align: justify;
+  word-wrap:break-word;
+}
