--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -21,9 +21,9 @@
         <div class="col-md-3 mb-md-0 mb-3">
           <h5 class="text-uppercase"><u><b>Social Links</b></u></h5>
           <ul class="list-unstyled">
-              <a rel="https://www.linkedin.com/in/shibom-kumar-bhowmik-9709081b8/" target="_blank"><img id="lnkdpng" src="assets/lnkd.png" alt="linkedinlogo"></a>
-              <a rel="https://www.linkedin.com/in/shibom-kumar-bhowmik-9709081b8/" target="_blank"><img id="lnkdpng" src="assets/fb.png" alt="fblogo"></a>
-              <a rel="https://www.linkedin.com/in/shibom-kumar-bhowmik-9709081b8/" target="_blank"><img id="lnkdpng" src="assets/insta.png" alt="instalogo"></a>
+              <a href="https://www.linkedin.com/in/shibom-bhowmik-9709081b8/" target="_blank"><img id="lnkdpng" src="assets/lnkd.png" alt="linkedinlogo"></a>
+              <a href="https://www.linkedin.com/in/shibom-bhowmik-9709081b8/" target="_blank"><img id="lnkdpng" src="assets/fb.png" alt="fblogo"></a>
+              <a href="https://www.linkedin.com/in/shibom-bhowmik-9709081b8/" target="_blank"><img id="lnkdpng" src="assets/insta.png" alt="instalogo"></a>
           </ul>
         </div>
     </div>
