--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <img src="assets/complogo.png" alt="logo" id="logo" />
   </a>
 
-  <a href="#" id="courses" (click)="goToCourses()"><b>Courses</b></a>
+  <a href="#" id="courses"><b>Courses</b></a>
   <a href="#" id="faculty"><b>Faculty</b></a>
   <a href="#" id="placement"><b>Placements</b></a>
   <a href="#" id="review"><b>Reviews</b></a>
