--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
     <img src="assets/complogo.png" alt="logo" id="logo" />
   </a>
 
-  <a rel="" id="courses1" (click)="goToCourses()"><b>Courses</b></a>
-  <a rel="" id="faculty1" (click)="goToFaculty()"><b>Faculty</b></a>
+  <a id="courses1" (click)="goToCourses()"><b>Courses</b></a>
+  <a id="faculty1" (click)="goToFaculty()"><b>Faculty</b></a>
   <a id="placement1" (click)="goToPlacement()"><b>Placements</b></a>
   <a id="review1" (click)="goToReviews()"><b>Reviews</b></a>
   <a id="aboutus1" (click)="goToAboutUs()"><b>About Us</b></a>
