--- a/src/app/homecourses/homecourses.component.html
+++ b/src/app/homecourses/homecourses.component.html
@@ -24,7 +24,7 @@
                       <p>
                         Rating : <ngb-rating [max]="5" [rate]="4" [readonly]="true"></ngb-rating> (2k ratings)
                       </p>
-						 					<button type="button" class="btn btn-primary">View Course</button>
+						 					<a routerLink="/courses" routerLinkActive="active" ><button type="button" class="btn btn-primary">View Courses</button></a>
 						 				</div>
 						 			</div>
 						 		</div>
@@ -40,7 +40,7 @@
                       <p>
                         Rating : <ngb-rating [max]="5" [rate]="5" [readonly]="true"></ngb-rating> (1k ratings)
                       </p>
-						 					<button type="button" class="btn btn-primary">View Course</button>
+											<a routerLink="/courses" routerLinkActive="active" ><button type="button" class="btn btn-primary">View Courses</button></a>
 						 				</div>
 						 			</div> 			
 						 		</div>
@@ -58,7 +58,7 @@
                         Rating : <ngb-rating [max]="5" [rate]="4" [readonly]="true"></ngb-rating>
                          (7k ratings)
                       </p>
-						 					<button type="button" class="btn btn-primary">View Course</button>
+											<a routerLink="/courses" routerLinkActive="active" ><button type="button" class="btn btn-primary">View Courses</button></a>
 						 				</div>
 						 			</div>
 						 		</div>
@@ -82,7 +82,7 @@
                         Rating : <ngb-rating [max]="5" [rate]="5" [readonly]="true"></ngb-rating>
                         (3k ratings)
                       </p>
-						 					<button type="button" class="btn btn-primary">View Course</button>
+											<a routerLink="/courses" routerLinkActive="active" ><button type="button" class="btn btn-primary">View Courses</button></a>
 						 				</div>
 						 			</div>		
 						 		</div>
@@ -98,7 +98,7 @@
                       <p>
                         Rating : <ngb-rating [max]="5" [rate]="4" [readonly]="true"></ngb-rating>(11k ratings)
                       </p>
-						 					<button type="button" class="btn btn-primary">View Course</button>
+											<a routerLink="/courses" routerLinkActive="active" ><button type="button" class="btn btn-primary">View Courses</button></a>
 						 				</div>
 						 			</div>			
 						 		</div>
@@ -114,7 +114,7 @@
                       <p>
                         Rating : <ngb-rating [max]="5" [rate]="5" [readonly]="true"></ngb-rating>(8k ratings)
                       </p>
-						 					<button type="button" class="btn btn-primary">View Course</button>
+											<a routerLink="/courses" routerLinkActive="active" ><button type="button" class="btn btn-primary">View Courses</button></a>
 						 				</div>
 						 			</div>
 						 		</div>
