--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,22 @@
-<p>signup works!</p>
+<body>
+  <img src="assets/complogo.png" alt="logo" id="logo" />
+  <div class="background">
+    <div class="shape"></div>
+    <div class="shape"></div>
+  </div>
+  <form (ngSubmit)="onSubmit()">
+    <h3><u>Sign Up Coder</u></h3>
+
+    <label for="name">Name</label>
+    <input type="text" placeholder="Name" id="name" [(ngModel)]="userName" [ngModelOptions]="{standalone: true}">
+
+    <label for="username">Email</label>
+    <input type="email" placeholder="Email" id="username" [(ngModel)]="userEmail" [ngModelOptions]="{standalone: true}">
+
+    <label for="password">Password</label>
+    <input type="password" placeholder="Password" id="password" [(ngModel)]="userPassword" [ngModelOptions]="{standalone: true}">
+
+    <button id="login" type="submit">Sign Up</button>
+    <div id="signup">Already a User ? <a routerLink="/login" routerLinkActive="active">Login</a></div>
+  </form>
+</body>
