--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<body>
+  <img src="assets/complogo.png" alt="logo" id="logo" />
+  <div class="background">
+    <div class="shape"></div>
+    <div class="shape"></div>
+  </div>
+  <form (ngSubmit)="onSubmit()">
+    <h3><u>Welcome Coder</u></h3>
+
+    <label for="username">Username</label>
+    <input type="email" placeholder="Email" id="username" [(ngModel)]="userEmail" [ngModelOptions]="{standalone: true}">
+
+    <label for="password">Password</label>
+    <input type="password" placeholder="Password" id="password" [(ngModel)]="userPassword" [ngModelOptions]="{standalone: true}">
+
+    <button id="login" type="submit">Log In</button>
+    <div id="signup">Not a User ? <a routerLink="/signup" routerLinkActive="active">Sign Up</a></div>
+  </form>
+</body>
