--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -5,6 +5,7 @@
   margin-right:10px;
   margin-top:5px;
   height: 50px;
+  font-family: Comic Sans MS, Comic Sans, cursive;
 }
 
 ::ng-deep .side-nav-content {
