--- a/src/app/coursesdetails/coursesdetails.component.html
+++ b/src/app/coursesdetails/coursesdetails.component.html
@@ -1,5 +1,31 @@
-<div>
+<nav id="nav" class="d-flex navbar navbar-expand-lg navbar-light bg-warning sticky-top">
+  <a routerLink="/home" routerLinkActive="active">
+    <img src="assets/complogo.png" alt="logo" id="logo" />
+  </a>
+
+  <a href="#" id="cart"><b>Cart</b></a>
+  <a href="#" id="orders"><b>Orders</b></a>
+
+  <div class="dropdown">
+    <img class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" src="assets/login.png" alt="login"/>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li id="proli"><a class="dropdown-item" routerLink="/login" routerLinkActive="active">Login</a></li>
+        <li id="proli"><a class="dropdown-item" routerLink="/signup" routerLinkActive="active">Sign Up</a></li>
+      </ul>
+   </div>
+</nav>
+
+<br/>
+<br/>
+
+
+
+
+<!-- <div>
   <h2>{{course.name}}</h2>
   <p>Price : 	₹{{course.price}}</p>
   <p>Description : {{course.description}}</p>
-</div>
+</div> -->
+
+<br/>
+<app-footer></app-footer>
