updating coursedetails page

--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -10,6 +10,7 @@
     <img class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" src="assets/login.png" alt="login"/>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
         <li id="proli"><a class="dropdown-item" routerLink="/login" routerLinkActive="active">Login</a></li>
+        <li id="proli"><a class="dropdown-item" routerLink="/dashboard" routerLinkActive="active">Dashboard</a></li>
         <li id="proli"><a class="dropdown-item" routerLink="/signup" routerLinkActive="active">Sign Up</a></li>
       </ul>
    </div>
