--- a/src/app/coursesdetails/coursesdetails.component.css
+++ b/src/app/coursesdetails/coursesdetails.component.css
@@ -61,3 +61,63 @@
   width:100%;
   z-index:100;
 }
+
+/* ------------------------------------------ */
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 0 auto;
+  padding: 20px;
+  margin-top:40px;
+  margin-bottom:40px;
+}
+
+.video {
+  flex: 1;
+  min-width: 300px;
+  max-width: 700px;
+}
+
+.video iframe {
+  width: 100%;
+  height: 440px; 
+    border: none;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+}
+
+.content h2 {
+  margin-top: 0;
+  color: #333;
+}
+
+.content p {
+  color: #666;
+}
+
+body {
+  font-family:Comic Sans MS, Comic Sans, cursive;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f1f1f1;
+}
+
+#price{
+  margin-left: 20px;
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: bold;
+}
