--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,1 +1,16 @@
-<p>orders works!</p>
+<div class="container-fluid g-0">
+  <app-headermain (sideNavToggle)="sideNavStatus=$event"></app-headermain>
+
+  <main>
+    <app-sidenav [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open':sideNavStatus}"></app-sidenav>
+      <div class="display-area">
+        <!-- <router-outlet></router-outlet> -->
+        <div [ngClass]="{'display-area-shrink':sideNavStatus}">
+              <p class="fs-1 fw-bold">
+                Thanks for your orders!
+              </p>
+        </div>
+    </div>
+  </main>
+</div>
+
