--- a/src/app/liveclasses/liveclasses.component.html
+++ b/src/app/liveclasses/liveclasses.component.html
@@ -10,8 +10,10 @@
                 Your upcoming live classes...
               </p>
               <div class="card">
-                <h2>Join NodeJS Live Classes</h2>
+                <h2>Join NodeJS Live Class</h2>
                 <p>Welcome learner! Join the session and learn from experts.</p>
+                <p>From : 2:00(P.M) to 4:00(P.M)</p>
+                <p>Date : 27th July 2023</p>
                 <div class="button-container">
                   <a routerLink="/zoom" routerLinkActive="active" class="button">Join Now</a>
                 </div>
