updating mycourses page

--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -3,8 +3,8 @@
     <img src="assets/complogo.png" alt="logo" id="logo" />
   </a>
 
-  <a routerLink="/cart" routerLinkActive="active" id="cart"><b>Cart</b></a>
-  <a roterLink="/orders" routerLinkActive="active" id="orders"><b>Orders</b></a>
+  <a routerLink="/404error" routerLinkActive="active" id="cart"><b>Cart</b></a>
+  <a roterLink="/orders" routerLinkActive="active" id="orders1"><b>Orders</b></a>
 
   <div class="dropdown">
     <img class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" src="assets/login.png" alt="login"/>
