--- a/src/app/enrolledcourses/enrolledcourses.component.css
+++ b/src/app/enrolledcourses/enrolledcourses.component.css
@@ -1,5 +1,5 @@
 #logo{
-  margin-left:40px;
+  margin-left:50px;
   margin-top: 1px;
   width: 200px;
   height: 45px;
@@ -34,15 +34,7 @@
   text-decoration: none;
   color: black;
   font-size: 19px;
-  margin-left: 1020px;
-  font-family: Comic Sans MS, Comic Sans, cursive;
-}
-
-#orders1{
-  text-decoration: none;
-  color: black;
-  font-size: 19px;
-  margin-left: 29px;
+  margin-left: 50px;
   font-family: Comic Sans MS, Comic Sans, cursive;
 }
 
@@ -51,9 +43,37 @@
   cursor: pointer;
 }
 
-#orders1:hover{
+#courses{
+  text-decoration: none;
+  color: black;
+  font-size: 19px;
+  margin-left: 1050px;
+  font-family: Comic Sans MS, Comic Sans, cursive;
+}
+
+#courses:hover{
   color: #3a3e39;
   cursor: pointer;
+}
+
+#logout{
+  cursor:pointer;
+}
+
+::ng-deep #nav{
+  position: fixed;
+  width:100%;
+  z-index:100;
+}
+
+#head{
+  margin-top: 15px;
+  margin-left: 50px;
+  font-size: 30px;
+  font-family: Comic Sans MS, Comic Sans, cursive;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .card{
@@ -87,63 +107,4 @@ ngb-rating {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 40px;
-}
-
-::ng-deep #nav{
-  position: fixed;
-  width:100%;
-  z-index:100;
-}
-
-#search{
-  margin-left: 80px;
-  margin-top: 9px;
-  width: 500px;
-  height: 40px;
-  border-radius: 5px;
-  border: 1px solid #3a3e39;
-  padding-left: 10px;
-  font-family: Comic Sans MS, Comic Sans, cursive;
-}
-
-#magicon{
-  margin-left: -40px;
-  margin-top: 7px;
-  width: 30px;
-  height: 30px;
-}
-
-hr{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border: 3px solid #20211f;
-}
-
-#btncollection{
-  display: flex;
-}
-
-.btn{
-  margin-left: 5px;
-  margin-right: 10px;
-  margin-bottom: 20px;
-  margin-top: 9px;
-  width: 160px;
-  height: 42px;
-  font-family: Comic Sans MS, Comic Sans, cursive;
-}
-
-#dropdownagain{
-  width:150px;
-  margin-left:5px;
-  margin-top:4px;
-}
-
-a:hover{
-  cursor:pointer;
-}
-
-li:hover{
-  cursor:pointer;
-  background: #d3d3d3;
 }
