--- a/src/app/mycourses/mycourses.component.html
+++ b/src/app/mycourses/mycourses.component.html
@@ -9,6 +9,23 @@
               <p class="fs-1 fw-bold">
                 Here are your courses, happy learning!
               </p>
+              <div class="course-container col-sm-12 col-lg-3">
+                <div class="card" *ngFor="let course of courses">
+                  <img src="{{course.imageUrl}}" class="card-img-top" alt="courseimg">
+                  <div class="card-body">
+                    <h4 class="card-title">{{course.name}}</h4>
+                    <p class="card-text">{{course.description}}</p>
+                    <p>
+                    <u>Educator</u> : {{course.educator}}
+                  </p>
+                  <p>
+                    Rating : <ngb-rating [max]="5" [rate]="course.rating" [readonly]="true"></ngb-rating>({{course.rating}}k ratings)
+                  </p>
+                  <p>Price : ₹{{course.price}}</p>
+                  <!-- <a  (click)="handleCourse(course.id)" ><button type="button" class="btn btn-primary">View Course</button></a> -->
+                  </div>
+                </div> 			
+              </div>
         </div>
     </div>
   </main>
